@@ -1,4 +1,5 @@
 ---------------------------------------------------------------------------
+- added support for mudflap (experimental, seems to not yet be correct)
 ---------------------------------------------------------------------------
 Version 4.5.7  [v4-beta] (rgerhards), 2009-11-18
 - added a so-called "On Demand Debug" mode, in which debug output can
